--- a/styles.css
+++ b/styles.css
@@ -57,21 +57,50 @@ h1{
 .card {
     width: 100px;
     height: 100px;
-    background-color: #ddd;
+    perspective: 1000px;
+    display: inline-block;
+    margin: 10px;
+}
+
+.card-inner {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+}
+
+.card.flipped .card-inner {
+    transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+    border-radius: 10px;
+}
+
+.card-front {
+    background-image: url("assets/images/card-back.jpg"); 
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    border: #f1d3d6 3px solid;
+}
+
+.card-back {
+    transform: rotateY(180deg);
     display: flex;
     align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    border-radius: 8px;
-    transition: transform 0.3s;
+    justify-content: center; 
+    background-color: rgb(243, 231, 235); 
 }
 
-.card img {
-    width: 80%;
-    height: 80%;
-    display: none;
-}
-
-.card.flipped img {
-    display: block;
+.card-back img {
+    width: 90%;
+    height: 90%;
+    border-radius: 5px;
 }
